--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "animejs": "^3.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
-    "vanilla-tilt": "^1.6.1"
+    "react-router-dom": "^4.3.1"
   }
 }
